RESOLVED FIXED54806
[EFL] Set of spatial navigations fixes
https://bugs.webkit.org/show_bug.cgi?id=54806
Summary [EFL] Set of spatial navigations fixes
Lukasz Slachciak
Reported 2011-02-19 07:45:39 PST
Attached patch improves spatial navigation in EFL port: - adds missing spatial navigation setting initialization - some doxygen comments added - fix for EWebLauncher which had this option disabled due to waiting for #18662 to be resolved
Attachments
Spatial navigation fixes (4.41 KB, patch)
2011-02-19 07:53 PST, Lukasz Slachciak
tonikitoo: review+
gyuyoung.kim: commit-queue-
Spatial navigation fixes (4.46 KB, patch)
2011-02-21 14:57 PST, Lukasz Slachciak
gyuyoung.kim: commit-queue-
Spatial navigation fixes (4.46 KB, patch)
2011-02-21 22:31 PST, Lukasz Slachciak
no flags
Lukasz Slachciak
Comment 1 2011-02-19 07:53:50 PST
Created attachment 83074 [details] Spatial navigation fixes
Antonio Gomes
Comment 2 2011-02-19 09:16:34 PST
Comment on attachment 83074 [details] Spatial navigation fixes Guys, review docs and set cq+/- accordingly.
Gyuyoung Kim
Comment 3 2011-02-20 18:47:22 PST
Comment on attachment 83074 [details] Spatial navigation fixes View in context: https://bugs.webkit.org/attachment.cgi?id=83074&action=review > Source/WebKit/efl/ChangeLog:6 > + https://webkit.org/b/54806 Bug url is strange. Please change about url with https://bugs.webkit.org/show_bug.cgi?id=54806 > Source/WebKit/efl/ChangeLog:7 > + Please add summary of this patch
Lukasz Slachciak
Comment 4 2011-02-21 14:57:52 PST
Created attachment 83221 [details] Spatial navigation fixes
Lukasz Slachciak
Comment 5 2011-02-21 15:01:30 PST
Hiello Gyuyoung. I changed url format in ChangeLog and added some additional notes
Gyuyoung Kim
Comment 6 2011-02-21 15:34:54 PST
Comment on attachment 83221 [details] Spatial navigation fixes View in context: https://bugs.webkit.org/attachment.cgi?id=83221&action=review Please do not set "+" by yourself. Please re-upload this patch again. Then, just request commit-queue. > Source/WebKit/efl/ChangeLog:3 > + Reviewed by NOBODY (OOPS!). Tonikitoo already review this patch. Please change "Reviewed by NOBODY (OOPS!)" with "Reviewed by Antonio Gomes". > Tools/ChangeLog:3 > + Reviewed by NOBODY (OOPS!). Tonikitoo already review this patch. Please change "Reviewed by NOBODY (OOPS!)" with "Reviewed by Antonio Gomes".
Lukasz Slachciak
Comment 7 2011-02-21 22:31:22 PST
Created attachment 83272 [details] Spatial navigation fixes
Lukasz Slachciak
Comment 8 2011-02-21 22:33:20 PST
Hello Gyuyoung. I added reviewer and resubmitted patch.
WebKit Commit Bot
Comment 9 2011-02-21 23:21:24 PST
Comment on attachment 83272 [details] Spatial navigation fixes Clearing flags on attachment: 83272 Committed r79295: <http://trac.webkit.org/changeset/79295>
WebKit Commit Bot
Comment 10 2011-02-21 23:21:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.