2011-02-21  Lukasz Slachciak  <l.slachciak@samsung.com>

Reviewed by Antonio Gomes.

        [EFL] Fixed missing spatial navigation setting initialization. Doxygen comments added.
        https://bugs.webkit.org/show_bug.cgi?id=54806

        * ewk/ewk_view.cpp:
        (_ewk_view_priv_new): spatial navigation setting initialization added
2011-02-21  Lukasz Slachciak  <l.slachciak@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Restored spatial navigation option in EWebLauncher since #18662 bug is closed
        https://bugs.webkit.org/show_bug.cgi?id=54806

        * EWebLauncher/main.c:
        (on_key_down): calling ewk_view_setting_spatial_navigation_set when "F12" pressed added.

Canonical link: https://commits.webkit.org/69218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79295 268f45cc-cd09-0410-ab3c-d52691b4dbfc